# cmake_stm32_gcc_template

./: .clang-format  .gitignore  README.md
components/libraries/STM32F10x_FWLib/CMSIS/inc/: core_cm3.h
components/libraries/STM32F10x_FWLib/CMSIS/src/: system_stm32f10x_template.c
components/libraries/STM32F10x_FWLib/STM32F10x_StdPeriph_Driver/inc/: stm32f10x_adc.h  stm32f10x_bkp.h  stm32f10x_cec.h  stm32f10x_dac.h  stm32f10x_dbgmcu.h  stm32f10x_dma.h  stm32f10x_exti.h  stm32f10x_flash.h  stm32f10x_fsmc.h  stm32f10x_gpio.h  stm32f10x_rcc.h  stm32f10x_spi.h  stm32f10x_usart.h
components/libraries/STM32F10x_FWLib/STM32F10x_StdPeriph_Driver/src/: stm32f10x_bkp.c  stm32f10x_crc.c  stm32f10x_dbgmcu.c  stm32f10x_flash.c  stm32f10x_i2c.c  stm32f10x_iwdg.c  stm32f10x_rtc.c  stm32f10x_tim.c  stm32f10x_wwdg.c
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/CMSIS/: CMakeLists.txt
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/CMSIS/inc/: core_cm3.h
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/CMSIS/src/: core_cm3.c  system_stm32f10x_template.c
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/STM32F10x_StdPeriph_Driver/: CMakeLists.txt
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/STM32F10x_StdPeriph_Driver/inc/: misc.h  stm32f10x_adc.h  stm32f10x_bkp.h  stm32f10x_can.h  stm32f10x_cec.h  stm32f10x_crc.h  stm32f10x_dac.h  stm32f10x_dbgmcu.h  stm32f10x_dma.h  stm32f10x_exti.h  stm32f10x_flash.h  stm32f10x_fsmc.h  stm32f10x_gpio.h  stm32f10x_i2c.h  stm32f10x_iwdg.h  stm32f10x_pwr.h  stm32f10x_rcc.h  stm32f10x_rtc.h  stm32f10x_sdio.h  stm32f10x_spi.h  stm32f10x_tim.h  stm32f10x_usart.h  stm32f10x_wwdg.h
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/STM32F10x_StdPeriph_Driver/src/: misc.c  stm32f10x_adc.c  stm32f10x_bkp.c  stm32f10x_can.c  stm32f10x_cec.c  stm32f10x_crc.c  stm32f10x_dac.c  stm32f10x_dbgmcu.c  stm32f10x_dma.c  stm32f10x_exti.c  stm32f10x_flash.c  stm32f10x_fsmc.c  stm32f10x_gpio.c  stm32f10x_i2c.c  stm32f10x_iwdg.c  stm32f10x_pwr.c  stm32f10x_rcc.c  stm32f10x_rtc.c  stm32f10x_sdio.c  stm32f10x_spi.c  stm32f10x_tim.c  stm32f10x_usart.c  stm32f10x_wwdg.c
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/SYSTEM/: CMakeLists.txt  readme.md
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/SYSTEM/delay/: delay.c  delay.h
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/SYSTEM/sys/: sys.c  sys.h
components/libraries/STM32F10x_StdPeriph_Lib_V3.6.0/SYSTEM/usart/: usart.c  usart.h
components/libraries/STM32F4xx_DSP_StdPeriph_Lib_V1.9.0/CMSIS/: CMakeLists.txt
components/libraries/STM32F4xx_DSP_StdPeriph_Lib_V1.9.0/STM32F4xx_StdPeriph_Driver/: CMakeLists.txt
components/libraries/SYSTEM/delay/: delay.c  delay.h
components/rtos/FreeRTOS/: CMakeLists.txt  README.md  croutine.c  event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
components/rtos/FreeRTOS/include/: FreeRTOS.h  StackMacros.h  atomic.h  croutine.h  deprecated_definitions.h  event_groups.h  list.h  message_buffer.h  mpu_prototypes.h  mpu_wrappers.h  portable.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stream_buffer.h  task.h  timers.h
components/rtos/UCOS3/: README.md
components/toolchain/cmake/: cortex_m3.cmake  cortex_m4.cmake  cross_compiler.cmake
projects/FreeRTOS/: CMakeLists.txt  FreeRTOS.code-workspace  build.sh
projects/FreeRTOS/inc/: FreeRTOSConfig.h  stm32f10x.h  stm32f10x_conf.h  stm32f10x_it.h
projects/FreeRTOS/src/: main.c  stm32f10x_it.c
projects/demo/: CMakeLists.txt  demo.code-workspace
projects/demo/inc/: stm32f10x.h
projects/demo/src/: main.c  stm32f10x_it.c  system_stm32f10x.c
projects/stm32f1_std/: CMakeLists.txt  stm32f1_std.code-workspace
projects/stm32f1_std/inc/: stm32f10x.h  stm32f10x_it.h  system_stm32f10x.h
projects/stm32f1_std/src/: main.c  stm32f10x_it.c  system_stm32f10x.c
projects/stm32f4/: build.sh
projects/stm32f4/inc/: stm32f4xx_conf.h
projects/stm32f4/src/: main.c
projects/stm32f4_std/: CMakeLists.txt  stm32f4_std.code-workspace
projects/stm32f4_std/driver/: CMakeLists.txt  README.md
projects/stm32f4_std/driver/led/: led.c  led.h  led_test.c
projects/stm32f4_std/inc/: main.h  stm32f4xx_conf.h  stm32f4xx_it.h
projects/stm32f4_std/src/: main.c  stm32f4xx_it.c  system_stm32f4xx.c
(+103 files in other folders)
